# redblue

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOUT.md  LICENSE  PHILOSOPHY.md  README.md  ROADMAP.md  SPEC.md  export.sh  test.redblue
.github/workflows/: ci.yml  release.yml
docs/: GRAMMAR.md
examples/: async.rb  complete_examples.rb  errors.rb  files.rb  fizzbuzz.rb  format_me.rb  formats.rb  hello.rb  module_example.rb  network.rb  objects.rb  test_arithmetic.rb  testing.rb  time.rb
modules/: MathUtils.rb
src/: analyzer.rs  error.rs  formatter.rs  lexer.rs  lib.rs  linter.rs  main.rs  parser.rs  stdlib.rs  value.rs  vm.rs
src/repl/: commands.rs  completer.rs  history.rs  mod.rs
src/stdlib/: console.rs  files.rs  formats.rs  list.rs  math.rs  mod.rs  network.rs  text.rs
src/testing/: assertions.rs  harness.rs  mod.rs  reporter.rs  runner.rs
tests/: integration_test.rb  redblue_test.rs  suite.rb  test_arithmetic.rb
tooling/repl/: README.md
tooling/vscode/: README.md
