[package]
name = "redblue"
version = "0.1.0"
edition = "2021"
authors = ["Redblue Contributors"]
description = "A programming language as readable as plain English"
license = "MIT"
repository = "https://github.com/redblue-lang/redblue"
keywords = ["programming-language", "compiler"]
categories = ["compiler", "development-tools"]

[[bin]]
name = "rb"
path = "src/main.rs"

[lib]
name = "redblue"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
